Add option to save file with 'BOM' for unicode